Add session validation endpoints and centralize auth via HandlerInterceptor
- New /validate_session and /validate_and_refresh_session endpoints using
  authService.validateSessionWithToken and
  validateAndRefreshSessionWithTokens from Descope Java SDK 1.1.0
- Extract auth into DescopeAuthInterceptor: parses the Bearer token,
  optionally combines with X-Refresh-Token, manually checks the aud claim
  against the configured project ID (SDK 1.1.0 lacks the aud overload),
  and attaches the resolved Token to the request as an attribute
- Move CORS into WebConfig and replace the @CrossOrigin annotation;
  preflight OPTIONS requests bypass the interceptor via
  CorsUtils.isPreFlightRequest so browser CORS still succeeds
- Lift DescopeClient and AuthenticationService into @Bean methods on the
  application class; both are skipped via @ConditionalOnExpression and
  @ConditionalOnBean when descope.project.id is empty, so the app boots
  cleanly without env vars and protected endpoints return 500 with a
  config-missing message
- Wire client/src/components/TestApiComponent.jsx to pull the session
  JWT via getSessionToken() from @descope/react-sdk and call
  /validate_session with the Authorization header; second card renders
  the returned token claims alongside the existing access-key card
- spring.config.import an optional .env file from application.properties
  so local secrets stay out of the repo; add server/.env.sample and
  ignore server/.env via server/.gitignore
- Rewrite README for Spring Boot 4.0 + SDK 1.1.0: documents the new
  endpoints, the manual aud check workaround, the .env workflow, and a
  troubleshooting table

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>